[#50203919] Remove padding from dashboard sidebar to prevent scrollbars on dashboard

--- a/app/assets/stylesheets/dashboard.scss
+++ b/app/assets/stylesheets/dashboard.scss
@@ -21,10 +21,6 @@ div[data-page="Dashboard"] {
       right: $help-pill-width + (2 * $guts-padding);
     }
 
-    .content {
-        padding-right: 15px;
-    }
-
     .main_activity_list .heading {
         display: none;
     }
